--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "sails-flash": "^0.0.1",
     "sails-hook-orm": "^4.0.0",
     "sails-hook-sockets": "^2.0.0",
-    "tailwindcss-scrollbar": "^0.1.0"
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@rsbuild/plugin-react": "^0.7.3",
