--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
     "axios": "^1.7.3",
+    "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^5.0.0",
     "daisyui": "^4.12.10",
     "inertia-sails": "^0.2.2",
     "react": "^18.2.0",
@@ -19,6 +21,7 @@
     "sails-flash": "^0.0.1",
     "sails-hook-orm": "^4.0.0",
     "sails-hook-sockets": "^2.0.0",
+    "sails-mongo": "^2.1.1",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
