--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-mongodb-session": "^5.0.0",
     "daisyui": "^4.12.10",
     "inertia-sails": "^0.2.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
