--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^5.0.0",
     "daisyui": "^4.12.10",
+    "firebase": "^10.12.5",
     "inertia-sails": "^0.2.2",
     "moment": "^2.30.1",
     "react": "^18.2.0",
