--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "sails-hook-orm": "^4.0.0",
     "sails-hook-sockets": "^2.0.0",
     "sails-mongo": "^2.1.1",
-    "tailwind-scrollbar": "^3.1.0"
+    "tailwind-scrollbar": "^3.1.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@rsbuild/plugin-react": "^0.7.3",
