--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sails-hook-orm": "^4.0.0",
     "sails-hook-sockets": "^2.0.0",
     "sails-mongo": "^2.1.1",
+    "swiper": "^11.1.9",
     "tailwind-scrollbar": "^3.1.0",
     "zustand": "^4.5.5"
   },
